--- a/index.html
+++ b/index.html
@@ -2,10 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello world!!!</title>
+    <title>Undercover</title>
+    <link href="style/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
-<body>
-<h1>Hello world!!!</h1>
-<h2>42</h2>
-</body>
+    <body>
+        <header>
+            <h1>UNDERCOVER</h1>
+            <p class="logo">DESIGN TEAM</p>
+            <img src="images/lamp10.png" alt="lamp" class="lamp">
+            <p class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</p>
+            <span class="scroll">SCROLL DOWN FOR MORE</span>
+            <img src="images/scroll.png" alt="down" class="down">
+        </header>
+        <main>
+            <section>
+                <h2 class="services-name">services</h2>
+                <div class="services">
+                    <div class="left-services">
+                        <p class="name-list">WEB DESIGN</p>
+                        <ul class="list">
+                            <li class="list-item"><a href="#">LOGO DESIGN</a></li>
+                            <li class="list-item"><a href="#">BRANDING</a> </li>
+                            <li class="list-item"><a href="#">UI</a> </li>
+                            <li class="list-item"><a href="#">PHOTOGRAPHY</a> </li>
+                            <li class="list-item"><a href="#">GRAPHIC DESIGN</a> </li>
+                        </ul>
+                    </div>
+                    <div class="right-services">
+                        <p class="services-text">Web design is our passion. Our team likes to create unique web pages for our clients.
+                            Understanding users is key point to good interaction with him through web design.<span>See more</span> or <span>portfolio</span></p>
+                        <img src="images/laptop2.png" alt="laptop" class="laptop">
+                    </div>
+                </div>
+            </section>
+        </main>
+    </body>
 </html>
