--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
     <body>
         <header>
-            <h1>UNDERCOVER</h1>
-            <p class="logo">DESIGN TEAM</p>
+            <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
             <img src="images/lamp10.png" alt="lamp" class="lamp">
             <p class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</p>
             <span class="scroll">SCROLL DOWN FOR MORE</span>
@@ -20,7 +19,7 @@
                 <h2 class="services-name">services</h2>
                 <div class="services">
                     <div class="left-services">
-                        <p class="name-list">WEB DESIGN</p>
+                        <p class="name-list">WEB DESIGN<span class="line"></span></p>
                         <ul class="list">
                             <li class="list-item"><a href="#">LOGO DESIGN</a></li>
                             <li class="list-item"><a href="#">BRANDING</a> </li>
