--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <header>
             <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
             <img src="images/lamp10.png" alt="lamp" class="lamp">
+            <!--replace on h2-->
             <p class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</p>
             <span class="scroll">SCROLL DOWN FOR MORE</span>
+            <!--remove image and use ::after for span above (with background + position absolute similar in h1)-->
             <img src="images/scroll.png" alt="down" class="down">
         </header>
         <main>
@@ -19,6 +21,7 @@
                 <h2 class="services-name">services</h2>
                 <div class="services">
                     <div class="left-services">
+                        <!--why p? use div-->
                         <p class="name-list">WEB DESIGN<span class="line"></span></p>
                         <ul class="list">
                             <li class="list-item"><a href="#">LOGO DESIGN</a></li>
