--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
         <header>
             <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
             <img src="images/lamp10.png" alt="lamp" class="lamp">
-            <p class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</p>
+            <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
             <span class="scroll">SCROLL DOWN FOR MORE</span>
-            <img src="images/scroll.png" alt="down" class="down">
         </header>
         <main>
             <section>
                 <h2 class="services-name">services</h2>
                 <div class="services">
                     <div class="left-services">
-                        <p class="name-list">WEB DESIGN<span class="line"></span></p>
+                        <div class="name-list">WEB DESIGN<span class="line"></span></div>
                         <ul class="list">
                             <li class="list-item"><a href="#">LOGO DESIGN</a></li>
                             <li class="list-item"><a href="#">BRANDING</a> </li>
