--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <body>
         <header>
             <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
-            <img src="images/lamp10.png" alt="lamp" class="lamp">
+            <div class="lamp">
+                <img src="images/lamp10.png" alt="lamp">
+            </div>
             <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
             <span class="scroll">SCROLL DOWN FOR MORE</span>
         </header>
