--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                 <img src="images/lamp10.png" alt="lamp">
             </div>
             <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
-            <span class="scroll">SCROLL DOWN FOR MORE</span>
+            <div class="scroll">
+                <span>SCROLL DOWN FOR MORE</span>
+            </div>
         </header>
         <main>
             <section>
