--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <body>
         <header>
             <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
-            <div class="lamp">
-                <img src="images/lamp10.png" alt="lamp">
-            </div>
+            <img src="images/lamp10.png" alt="lamp" class="lamp">
             <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
             <div class="scroll">
                 <span>SCROLL DOWN FOR MORE</span>
@@ -33,7 +31,7 @@
                     </div>
                     <div class="right-services">
                         <p class="services-text">Web design is our passion. Our team likes to create unique web pages for our clients.
-                            Understanding users is key point to good interaction with him through web design.<span>See more</span> or <span>portfolio</span></p>
+                            Understanding users is key point to good interaction with him through web design.<span> See more</span> or <span>portfolio</span></p>
                         <img src="images/laptop2.png" alt="laptop" class="laptop">
                     </div>
                 </div>
