--- a/index.html
+++ b/index.html
@@ -6,36 +6,35 @@
     <link href="style/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
-    <body>
-        <header>
-            <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
-            <img src="images/lamp10.png" alt="lamp" class="lamp">
-            <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
-            <div class="scroll">
-                <span>SCROLL DOWN FOR MORE</span>
-            </div>
-        </header>
-        <main>
-            <section>
-                <h2 class="services-name">services</h2>
-                <div class="services">
-                    <div class="left-services">
-                        <div class="name-list">WEB DESIGN<span class="line"></span></div>
-                        <ul class="list">
-                            <li class="list-item"><a href="#">LOGO DESIGN</a></li>
-                            <li class="list-item"><a href="#">BRANDING</a> </li>
-                            <li class="list-item"><a href="#">UI</a> </li>
-                            <li class="list-item"><a href="#">PHOTOGRAPHY</a> </li>
-                            <li class="list-item"><a href="#">GRAPHIC DESIGN</a> </li>
-                        </ul>
-                    </div>
-                    <div class="right-services">
-                        <p class="services-text">Web design is our passion. Our team likes to create unique web pages for our clients.
-                            Understanding users is key point to good interaction with him through web design.<span> See more</span> or <span>portfolio</span></p>
-                        <img src="images/laptop2.png" alt="laptop" class="laptop">
-                    </div>
+<body>
+    <header>
+        <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
+        <img src="images/lamp10.png" alt="lamp" class="lamp">
+        <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
+        <div class="scroll">SCROLL DOWN FOR MORE</div>
+    </header>
+    <main>
+        <section id="services">
+            <h2>services</h2>
+            <div class="services">
+                <div class="left-services">
+                    <div class="name-list"><span>WEB DESIGN</span></div>
+                    <ul class="list">
+                        <li class="list-item"><a href="#">LOGO DESIGN</a></li>
+                        <li class="list-item"><a href="#">BRANDING</a> </li>
+                        <li class="list-item"><a href="#">UI</a> </li>
+                        <li class="list-item"><a href="#">PHOTOGRAPHY</a> </li>
+                        <li class="list-item"><a href="#">GRAPHIC DESIGN</a> </li>
+                    </ul>
                 </div>
-            </section>
-        </main>
-    </body>
+                <div class="right-services">
+                    <p class="services-text">Web design is our passion. Our team likes to create unique web pages for our clients.
+                        Understanding users is key point to good interaction with him through web design.<span> See more</span> or <span>portfolio</span></p>
+                    <img src="images/laptop2.png" alt="laptop" class="laptop">
+                </div>
+            </div>
+        </section>
+        <section id="portfolio"></section>
+    </main>
+</body>
 </html>
