--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                 <div class="left-services">
                     <div class="name-list"><span>WEB DESIGN</span></div>
                     <ul class="list">
-                        <li class="list-item"><a href="#">LOGO DESIGN</a></li>
-                        <li class="list-item"><a href="#">BRANDING</a> </li>
-                        <li class="list-item"><a href="#">UI</a> </li>
-                        <li class="list-item"><a href="#">PHOTOGRAPHY</a> </li>
-                        <li class="list-item"><a href="#">GRAPHIC DESIGN</a> </li>
+                        <li><a href="#">LOGO DESIGN</a></li>
+                        <li><a href="#">BRANDING</a> </li>
+                        <li><a href="#">UI</a> </li>
+                        <li><a href="#">PHOTOGRAPHY</a> </li>
+                        <li ><a href="#">GRAPHIC DESIGN</a> </li>
                     </ul>
                 </div>
                 <div class="right-services">
                     <p class="services-text">Web design is our passion. Our team likes to create unique web pages for our clients.
-                        Understanding users is key point to good interaction with him through web design.<span> See more</span> or <span>portfolio</span></p>
+                        Understanding users is key point to good interaction with him through web design.<a href=""> See more</a> or <a href="#">portfolio</a></p>
                     <img src="images/laptop2.png" alt="laptop" class="laptop">
                 </div>
             </div>
