--- a/index.html
+++ b/index.html
@@ -7,34 +7,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>
-    <header>
-        <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
-        <img src="images/lamp10.png" alt="lamp" class="lamp">
-        <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
-        <div class="scroll">SCROLL DOWN FOR MORE</div>
-    </header>
-    <main>
-        <section id="services">
-            <h2>services</h2>
-            <div class="services">
-                <div class="left-services">
-                    <div class="name-list"><span>WEB DESIGN</span></div>
-                    <ul class="list">
-                        <li><a href="#">LOGO DESIGN</a></li>
-                        <li><a href="#">BRANDING</a> </li>
-                        <li><a href="#">UI</a> </li>
-                        <li><a href="#">PHOTOGRAPHY</a> </li>
-                        <li ><a href="#">GRAPHIC DESIGN</a> </li>
-                    </ul>
+<header>
+    <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
+    <nav id="menu-toggle">
+        <input type="checkbox" id="ch-areas"/>
+        <label for="ch-areas">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+    </nav>
+    <img src="images/lamp10.png" alt="lamp" class="lamp">
+    <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
+    <div class="scroll">SCROLL DOWN FOR MORE</div>
+</header>
+<main>
+    <section id="services">
+        <h2>services</h2>
+        <div class="services">
+            <div class="left-services">
+                <div class="name-list"><span>WEB DESIGN</span></div>
+                <ul class="list">
+                    <li><a href="#">LOGO DESIGN</a></li>
+                    <li><a href="#">BRANDING</a></li>
+                    <li><a href="#">UI</a></li>
+                    <li><a href="#">PHOTOGRAPHY</a></li>
+                    <li><a href="#">GRAPHIC DESIGN</a></li>
+                </ul>
+            </div>
+            <div class="right-services">
+                <p class="services-text">Web design is our passion. Our team likes to create unique web pages for our
+                    clients.
+                    Understanding users is key point to good interaction with him through web design.<a href=""> See
+                        more</a> or <a href="#">portfolio</a></p>
+                <img src="images/laptop2.png" alt="laptop" class="laptop">
+            </div>
+        </div>
+    </section>
+    <section id="portfolio">
+        <h2>PORTFOLIO</h2>
+        <select>
+            <option>All categories</option>
+            <option>Design</option>
+            <option>UI</option>
+            <option>Photography</option>
+        </select>
+        <div class="slider">
+            <div>
+                <div class="wrapper-img">
+                    <img src="images/1-hover.png" alt="design">
                 </div>
-                <div class="right-services">
-                    <p class="services-text">Web design is our passion. Our team likes to create unique web pages for our clients.
-                        Understanding users is key point to good interaction with him through web design.<a href=""> See more</a> or <a href="#">portfolio</a></p>
-                    <img src="images/laptop2.png" alt="laptop" class="laptop">
+                <div class="slider-text">
+                    <h3>SUBSENCE MONOCHROME <span></span></h3>
+                    <p>Web design in monochromatic colors for SUBSENCE agency.</p>
+                    <span>web design</span>
                 </div>
             </div>
-        </section>
-        <section id="portfolio"></section>
-    </main>
+            <div>
+                <div class="wrapper-img">
+                    <img src="images/3-hover.png" alt="branding">
+                </div>
+                <div class="slider-text">
+                    <h3>DESIGN AGENCY BUSINESS CARD <span></span></h3>
+                    <p>Logotype and business card design for ARTDESIGN agency.</p>
+                    <span>branding</span>
+                </div>
+            </div>
+            <div>
+                <div class="wrapper-img">
+                    <img src="images/2-hover.png" alt="photography">
+                </div>
+                <div class="slider-text">
+                    <h3>FIXEDGEAR SHOP PHOTOSHOOT <span></span></h3>
+                    <p>Photoshoot for the annual issue of the fixed gear and road bikes magazine.</p>
+                    <span>photography</span>
+                </div>
+            </div>
+            <div>
+                <div class="wrapper-img">
+                    <img src="images/4-hover.png" alt="web">
+                </div>
+                <div class="slider-text">
+                    <h3>EDITOR'S PERSONAL PAGE <span></span></h3>
+                    <p>Web page created for Ryan Fields a famous US editor. </p>
+                    <span>web design</span>
+                </div>
+            </div>
+        </div>
+        <div class="prev-next">
+            <a href="#">1</a>
+            <a href="#">PREV</a>
+            <a href="#">7</a>
+            <a href="#">NEXT</a>
+            <a href="#">99</a>
+        </div>
+    </section>
+</main>
 </body>
 </html>
