fixed portfolio and menu

--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 <header>
     <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
     <nav id="menu-toggle">
-        <input type="checkbox" id="ch-areas"/>
-        <label for="ch-areas">
-            <span></span>
-            <span></span>
-            <span></span>
-        </label>
+        <span></span>
+        <span></span>
+        <span></span>
     </nav>
     <img src="images/lamp10.png" alt="lamp" class="lamp">
     <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
@@ -54,9 +51,7 @@
         </select>
         <div class="slider">
             <div>
-                <div class="wrapper-img">
-                    <img src="images/1-hover.png" alt="design">
-                </div>
+                <button>SEE FULL PROJECT</button>
                 <div class="slider-text">
                     <h3>SUBSENCE MONOCHROME <span></span></h3>
                     <p>Web design in monochromatic colors for SUBSENCE agency.</p>
@@ -64,44 +59,38 @@
                 </div>
             </div>
             <div>
-                <div class="wrapper-img">
-                    <img src="images/3-hover.png" alt="branding">
-                </div>
-                <div class="slider-text">
-                    <h3>DESIGN AGENCY BUSINESS CARD <span></span></h3>
-                    <p>Logotype and business card design for ARTDESIGN agency.</p>
-                    <span>branding</span>
-                </div>
-            </div>
-            <div>
-                <div class="wrapper-img">
-                    <img src="images/2-hover.png" alt="photography">
-                </div>
-                <div class="slider-text">
-                    <h3>FIXEDGEAR SHOP PHOTOSHOOT <span></span></h3>
-                    <p>Photoshoot for the annual issue of the fixed gear and road bikes magazine.</p>
-                    <span>photography</span>
-                </div>
-            </div>
-            <div>
-                <div class="wrapper-img">
-                    <img src="images/4-hover.png" alt="web">
-                </div>
-                <div class="slider-text">
-                    <h3>EDITOR'S PERSONAL PAGE <span></span></h3>
-                    <p>Web page created for Ryan Fields a famous US editor. </p>
-                    <span>web design</span>
-                </div>
-            </div>
-        </div>
-        <div class="prev-next">
-            <a href="#">1</a>
-            <a href="#">PREV</a>
-            <a href="#">7</a>
-            <a href="#">NEXT</a>
-            <a href="#">99</a>
-        </div>
-    </section>
-</main>
-</body>
-</html>
+                <button>SEE FULL PROJECT</button>
+                 <div class="slider-text">
+                     <h3>DESIGN AGENCY BUSINESS CARD <span></span></h3>
+                     <p>Logotype and business card design for ARTDESIGN agency.</p>
+                     <span>branding</span>
+                 </div>
+             </div>
+             <div>
+                 <button>SEE FULL PROJECT</button>
+                  <div class="slider-text">
+                      <h3>FIXEDGEAR SHOP PHOTOSHOOT <span></span></h3>
+                      <p>Photoshoot for the annual issue of the fixed gear and road bikes magazine.</p>
+                      <span>photography</span>
+                  </div>
+              </div>
+              <div>
+                  <button>SEE FULL PROJECT</button>
+                   <div class="slider-text">
+                       <h3>EDITOR'S PERSONAL PAGE <span></span></h3>
+                       <p>Web page created for Ryan Fields a famous US editor. </p>
+                       <span>web design</span>
+                   </div>
+               </div>
+           </div>
+           <div class="prev-next">
+               <a href="#">1</a>
+               <a href="#">PREV</a>
+               <a href="#">7</a>
+               <a href="#">NEXT</a>
+               <a href="#">99</a>
+           </div>
+       </section>
+   </main>
+   </body>
+   </html>
