--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 <body>
 <header>
     <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
-    <nav id="menu-toggle">
+    <!--create container for sandwich and nav, eg-->
+    <!--<div id="navigation">
+        <div class="sandwich">...</div>
+        <nav>
+            nav link
+            nav link
+            nav link
+            ...
+        </nav>
+    </div>-->
+    <nav id="menu-toggle"><!--nav for navigation; here only "sandwich"-->
+        <!--wrap spans into div.sandwich-->
         <span></span>
         <span></span>
         <span></span>
