--- a/index.html
+++ b/index.html
@@ -9,22 +9,16 @@
 <body>
 <header>
     <h1>UNDERCOVER <span>DESIGN TEAM</span></h1>
-    <!--create container for sandwich and nav, eg-->
-    <!--<div id="navigation">
-        <div class="sandwich">...</div>
+    <div id="navigation">
+        <div class="sandwich">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <nav>
-            nav link
-            nav link
-            nav link
-            ...
+
         </nav>
-    </div>-->
-    <nav id="menu-toggle"><!--nav for navigation; here only "sandwich"-->
-        <!--wrap spans into div.sandwich-->
-        <span></span>
-        <span></span>
-        <span></span>
-    </nav>
+    </div>
     <img src="images/lamp10.png" alt="lamp" class="lamp">
     <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
     <div class="scroll">SCROLL DOWN FOR MORE</div>
