--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
             <span></span>
             <span></span>
         </div>
-        <nav>
-
-        </nav>
+        <nav></nav>
     </div>
     <img src="images/lamp10.png" alt="lamp" class="lamp">
     <h2 class="caption">OUR DESIGN'S SO WANTED THAT WE HAVE TO HIDE</h2>
