--- a/index.html
+++ b/index.html
@@ -60,45 +60,45 @@
                     <div style="width: 400px; border: 1px solid #000; padding-top: 100%;"></div>
                 </div>
                 -->
-                <div>
-                    <button>SEE FULL PROJECT</button>
+                <div class="slider-item">
+                    <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3>SUBSENCE MONOCHROME <span></span></h3>
+                        <h3>SUBSENCE MONOCHROME</h3>
                         <p>Web design in monochromatic colors for SUBSENCE agency.</p>
                         <span>web design</span>
                     </div>
                 </div>
-                <div>
-                    <button>SEE FULL PROJECT</button>
+                <div class="slider-item">
+                    <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3>DESIGN AGENCY BUSINESS CARD <span></span></h3>
+                        <h3>DESIGN AGENCY BUSINESS CARD </h3>
                         <p>Logotype and business card design for ARTDESIGN agency.</p>
                         <span>branding</span>
                     </div>
                 </div>
-                <div>
-                    <button>SEE FULL PROJECT</button>
+                <div class="slider-item">
+                    <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3>FIXEDGEAR SHOP PHOTOSHOOT <span></span></h3>
+                        <h3>FIXEDGEAR SHOP PHOTOSHOOT </h3>
                         <p>Photoshoot for the annual issue of the fixed gear and road bikes magazine.</p>
                         <span>photography</span>
                     </div>
                 </div>
-                <div>
-                    <button>SEE FULL PROJECT</button>
+                <div class="slider-item">
+                    <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3>EDITOR'S PERSONAL PAGE <span></span></h3>
+                        <h3>EDITOR'S PERSONAL PAGE </h3>
                         <p>Web page created for Ryan Fields a famous US editor. </p>
                         <span>web design</span>
                     </div>
                 </div>
             </div>
             <div class="prev-next">
-                <a href="#">1</a>
-                <a href="#">PREV</a>
-                <a href="#">7</a>
-                <a href="#">NEXT</a>
-                <a href="#">99</a>
+                <span>1</span>
+                <span>PREV</span>
+                <span>7</span>
+                <span>NEXT</span>
+                <span>99</span>
             </div>
         </section>
     </main>
