--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="slider-text">
                         <h3>SUBSENCE MONOCHROME</h3>
                         <p>Web design in monochromatic colors for SUBSENCE agency.</p>
-                        <span>web design</span>
+                        <span>web design</span><!--better use i-->
                     </div>
                 </div>
                 <div class="slider-item">
