many little fixes

--- a/index.html
+++ b/index.html
@@ -101,6 +101,45 @@
                 <span>99</span>
             </div>
         </section>
+        <section id="info">
+            <div id="feedbacks">
+                <h2>FEEDBACKS</h2>
+                <div class="feedbacks-item">
+                    <div class="people">
+                        <img src="images/feedback-1.png" alt="Sara Robinson">
+                        <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre work.</p>
+                    </div>
+                    <h3>SARAH ROBINSON</h3>
+                </div>
+                <div class="feedbacks-item">
+                    <div class="people">
+                        <img src="images/feedback-2.png" alt="Nathan Perish">
+                        <p>At first I was not sure about this team but I decided to give them a chance. And they didn’t let me down. Good job, guys.</p>
+                    </div>
+                    <h3>NATHAN PERISH</h3>
+                </div>
+                <div class="feedbacks-item">
+                    <div class="people">
+                        <img src="images/feedback-3.png" alt="Amy Jones">
+                        <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre work.</p>
+                    </div>
+                    <h3>AMY JONES</h3>
+                </div>
+                <span>CLICK HERE FOR MORE FEEDBACKS</span>
+            </div>
+            <div id="contact-us">
+                <h2> CONTACT US</h2>
+                <form action="#" method="post">
+                    <input type="text"  placeholder="Name"  id="name" value="" required>
+                    <input type="text"  placeholder="Email"  id="email" value="" required>
+                    <textarea placeholder="Your message" id="message"></textarea>
+                    <button type="submit" id="submit">SEND</button>
+                </form>
+                <div class="wrap-img">
+                    <img src="images/form.png" alt="form">
+                </div>
+            </div>
+        </section>
     </main>
 </div>
 </body>
