--- a/index.html
+++ b/index.html
@@ -55,41 +55,36 @@
                 <option>Photography</option>
             </select>
             <div class="slider">
-                <!--
-                <div style="display:inline-block;">
-                    <div style="width: 400px; border: 1px solid #000; padding-top: 100%;"></div>
-                </div>
-                -->
                 <div class="slider-item">
                     <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3>SUBSENCE MONOCHROME</h3>
+                        <h3><span>SUBSENCE MONOCHROME</span></h3>
                         <p>Web design in monochromatic colors for SUBSENCE agency.</p>
-                        <span>web design</span><!--better use i-->
+                        <i>web design</i>
                     </div>
                 </div>
                 <div class="slider-item">
                     <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3>DESIGN AGENCY BUSINESS CARD </h3>
+                        <h3><span>DESIGN AGENCY BUSINESS CARD</span> </h3>
                         <p>Logotype and business card design for ARTDESIGN agency.</p>
-                        <span>branding</span>
+                        <i>branding</i>
                     </div>
                 </div>
                 <div class="slider-item">
                     <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3>FIXEDGEAR SHOP PHOTOSHOOT </h3>
+                        <h3><span>FIXEDGEAR SHOP PHOTOSHOOT</span> </h3>
                         <p>Photoshoot for the annual issue of the fixed gear and road bikes magazine.</p>
-                        <span>photography</span>
+                        <i>photography</i>
                     </div>
                 </div>
                 <div class="slider-item">
                     <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3>EDITOR'S PERSONAL PAGE </h3>
+                        <h3><span>EDITOR'S PERSONAL PAGE</span></h3>
                         <p>Web page created for Ryan Fields a famous US editor. </p>
-                        <span>web design</span>
+                        <i>web design</i>
                     </div>
                 </div>
             </div>
@@ -135,9 +130,7 @@
                     <textarea placeholder="Your message" id="message"></textarea>
                     <button type="submit" id="submit">SEND</button>
                 </form>
-                <div class="wrap-img">
-                    <img src="images/form.png" alt="form">
-                </div>
+                <img src="images/form.png" alt="form">
             </div>
         </section>
     </main>
