--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
             <div id="feedbacks">
                 <h2>FEEDBACKS</h2>
                 <div class="feedbacks-item">
-                    <div class="people">
+                    <div class="people"><!--people? maybe better comment-content?-->
                         <img src="images/feedback-1.png" alt="Sara Robinson">
                         <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre work.</p>
                     </div>
-                    <h3>SARAH ROBINSON</h3>
+                    <h3>SARAH ROBINSON</h3><!--it is not a caption-->
                 </div>
                 <div class="feedbacks-item">
                     <div class="people">
@@ -125,7 +125,7 @@
             <div id="contact-us">
                 <h2> CONTACT US</h2>
                 <form action="#" method="post">
-                    <input type="text"  placeholder="Name"  id="name" value="" required>
+                    <input type="text"  placeholder="Name"  id="name" value="" required> <!--by default type === text-->
                     <input type="text"  placeholder="Email"  id="email" value="" required>
                     <textarea placeholder="Your message" id="message"></textarea>
                     <button type="submit" id="submit">SEND</button>
