--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="slider-item">
                     <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3><span>DESIGN AGENCY BUSINESS CARD</span> </h3>
+                        <h3><span>DESIGN AGENCY BUSINESS CARD</span></h3>
                         <p>Logotype and business card design for ARTDESIGN agency.</p>
                         <i>branding</i>
                     </div>
@@ -74,7 +74,7 @@
                 <div class="slider-item">
                     <button><a href="#">SEE FULL PROJECT</a></button>
                     <div class="slider-text">
-                        <h3><span>FIXEDGEAR SHOP PHOTOSHOOT</span> </h3>
+                        <h3><span>FIXEDGEAR SHOP PHOTOSHOOT</span></h3>
                         <p>Photoshoot for the annual issue of the fixed gear and road bikes magazine.</p>
                         <i>photography</i>
                     </div>
@@ -102,21 +102,24 @@
                 <div class="feedbacks-item">
                     <div class="people">
                         <img src="images/feedback-1.png" alt="Sara Robinson">
-                        <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre work.</p>
+                        <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre
+                            work.</p>
                     </div>
                     <h3>SARAH ROBINSON</h3>
                 </div>
                 <div class="feedbacks-item">
                     <div class="people">
                         <img src="images/feedback-2.png" alt="Nathan Perish">
-                        <p>At first I was not sure about this team but I decided to give them a chance. And they didn’t let me down. Good job, guys.</p>
+                        <p>At first I was not sure about this team but I decided to give them a chance. And they didn’t
+                            let me down. Good job, guys.</p>
                     </div>
                     <h3>NATHAN PERISH</h3>
                 </div>
                 <div class="feedbacks-item">
                     <div class="people">
                         <img src="images/feedback-3.png" alt="Amy Jones">
-                        <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre work.</p>
+                        <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre
+                            work.</p>
                     </div>
                     <h3>AMY JONES</h3>
                 </div>
@@ -125,12 +128,12 @@
             <div id="contact-us">
                 <h2> CONTACT US</h2>
                 <form action="#" method="post">
-                    <input type="text"  placeholder="Name"  id="name" value="" required>
-                    <input type="text"  placeholder="Email"  id="email" value="" required>
+                    <input type="text" placeholder="Name" id="name" value="" required>
+                    <input type="text" placeholder="Email" id="email" value="" required>
                     <textarea placeholder="Your message" id="message"></textarea>
                     <button type="submit" id="submit">SEND</button>
                 </form>
-                <img src="images/form.png" alt="form">
+                <!--<img src="images/form.png" alt="form">-->
             </div>
         </section>
     </main>
