--- a/index.html
+++ b/index.html
@@ -100,40 +100,39 @@
             <div id="feedbacks">
                 <h2>FEEDBACKS</h2>
                 <div class="feedbacks-item">
-                    <div class="people"><!--people? maybe better comment-content?-->
+                    <div class="content">
                         <img src="images/feedback-1.png" alt="Sara Robinson">
                         <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre
                             work.</p>
                     </div>
-                    <h3>SARAH ROBINSON</h3><!--it is not a caption-->
+                    <span class="name-feedbacks">SARAH ROBINSON</span>
                 </div>
                 <div class="feedbacks-item">
-                    <div class="people">
+                    <div class="content">
                         <img src="images/feedback-2.png" alt="Nathan Perish">
                         <p>At first I was not sure about this team but I decided to give them a chance. And they didn’t
                             let me down. Good job, guys.</p>
                     </div>
-                    <h3>NATHAN PERISH</h3>
+                    <span class="name-feedbacks">NATHAN PERISH</span>
                 </div>
                 <div class="feedbacks-item">
-                    <div class="people">
+                    <div class="content">
                         <img src="images/feedback-3.png" alt="Amy Jones">
                         <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre
                             work.</p>
                     </div>
-                    <h3>AMY JONES</h3>
+                    <span class="name-feedbacks">AMY JONES</span>
                 </div>
-                <span>CLICK HERE FOR MORE FEEDBACKS</span>
+                <span class="more-info">CLICK HERE FOR MORE FEEDBACKS</span>
             </div>
             <div id="contact-us">
                 <h2> CONTACT US</h2>
                 <form action="#" method="post">
-                    <input type="text"  placeholder="Name"  id="name" value="" required> <!--by default type === text-->
-                    <input type="text"  placeholder="Email"  id="email" value="" required>
+                    <input  placeholder="Name"  id="name" value="" required>
+                    <input  placeholder="Email"  id="email" value="" required>
                     <textarea placeholder="Your message" id="message"></textarea>
                     <button type="submit" id="submit">SEND</button>
                 </form>
-                <!--<img src="images/form.png" alt="form">-->
             </div>
         </section>
     </main>
