--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre
                             work.</p>
                     </div>
-                    <span class="name-feedbacks">SARAH ROBINSON</span>
+                    <div class="name-feedbacks">SARAH ROBINSON</div>
                 </div>
                 <div class="feedbacks-item">
                     <div class="content">
@@ -113,7 +113,7 @@
                         <p>At first I was not sure about this team but I decided to give them a chance. And they didn’t
                             let me down. Good job, guys.</p>
                     </div>
-                    <span class="name-feedbacks">NATHAN PERISH</span>
+                    <div class="name-feedbacks">NATHAN PERISH</div>
                 </div>
                 <div class="feedbacks-item">
                     <div class="content">
@@ -121,7 +121,7 @@
                         <p>Working with thise guys was an astonishing expirience for me. I was pleased with theyre
                             work.</p>
                     </div>
-                    <span class="name-feedbacks">AMY JONES</span>
+                    <div class="name-feedbacks">AMY JONES</div>
                 </div>
                 <span class="more-info">CLICK HERE FOR MORE FEEDBACKS</span>
             </div>
@@ -137,5 +137,7 @@
         </section>
     </main>
 </div>
+
+<script src="script.js"></script>
 </body>
 </html>
